--- a/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,5 @@
-<button mat-raiser-button (click)="navigateToProductCreate()">
+<button mat-raised-button color="primary" (click)="navigateToProductCreate()">
     Novo Produto
 </button>
+
+<app-product-read></app-product-read>
