--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,5 +1,31 @@
-<ul>
-    <li *ngFor="let product of products">
-        {{ product.id }} : {{ product.descricao }} : {{ product.referencia }} : {{ product.preco }}
-    </li>
-</ul>
+<div class="mat-elevation-z6">
+    <table mat-table [dataSource]="products">
+            <!-- Id Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>Id</th>
+            <td mat-cell *matCellDef="let row">{{row.id}}</td>
+        </ng-container>
+
+        <!-- Descrição Column -->
+        <ng-container matColumnDef="descricao">
+            <th mat-header-cell *matHeaderCellDef>Descrição</th>
+            <td mat-cell *matCellDef="let row">{{row.descricao}}</td>
+        </ng-container>
+
+        <!-- Referência Column -->
+        <ng-container matColumnDef="referencia">
+            <th mat-header-cell *matHeaderCellDef>Referência</th>
+            <td mat-cell *matCellDef="let row">{{row.referencia}}</td>
+        </ng-container>
+
+        <!-- Preço Column -->
+        <ng-container matColumnDef="preco">
+            <th mat-header-cell *matHeaderCellDef>Preço (R$)</th>
+            <td mat-cell *matCellDef="let row">{{row.preco | currency: 'BRL'}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+</div>
