--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,6 +1,6 @@
 <div class="mat-elevation-z6">
     <table mat-table [dataSource]="products">
-            <!-- Id Column -->
+        <!-- Id Column -->
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>Id</th>
             <td mat-cell *matCellDef="let row">{{row.id}}</td>
@@ -24,8 +24,31 @@
             <td mat-cell *matCellDef="let row">{{row.preco | currency: 'BRL'}}</td>
         </ng-container>
 
+        <!-- action Column -->
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Ações</th>
+            <td mat-cell *matCellDef="let row">
+                <a routerLink="/products/update/{{ row.id }}" class="edit">
+                    <i class="material-icons">
+                        edit
+                    </i>
+                </a>
+                <a routerLink="" class="delete">
+                    <i class="material-icons">
+                        delete
+                    </i>
+                </a>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <!-- <mat-paginator #paginator 
+        [length]="dataSource?.data.length" 
+        [pageIndex]="0" [pageSize]="6"
+        [pageSizeOptions]="[6,10,20,25, 50, 100]">
+    </mat-paginator> -->
 
 </div>
