--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -1,1 +1,27 @@
-<p>product-update works!</p>
+<mat-card>
+    <mat-card-title class="azul-cooperchip">Alterar Produto</mat-card-title>
+    <form>
+      
+        <mat-form-field>
+            <input matInput placeholder="Descrição" [(ngModel)]="product.descricao" name="descricao">
+        </mat-form-field>
+        
+        <mat-form-field>
+            <input matInput placeholder="Referência" [(ngModel)]="product.referencia" name="referencia">
+        </mat-form-field>
+    
+        <mat-form-field>
+            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.preco" name="preco">
+        </mat-form-field>
+    
+    </form>
+
+    <button mat-raised-button (click)="updateProduct()" color="accent">
+        Atualizar
+    </button>
+
+    <button mat-raised-button (click)="cancel()">
+        Calcelar
+    </button>
+    
+</mat-card>
