--- a/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,5 +1,5 @@
 <button mat-raised-button color="primary" (click)="navigateToProductCreate()">
-    Novo Produto
+    Adicionar Produto
 </button>
 
 <app-product-read></app-product-read>
