--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z6">
+<div class="mat-elevation-z8">
     <table mat-table [dataSource]="products">
         <!-- Id Column -->
         <ng-container matColumnDef="id">
@@ -33,7 +33,7 @@
                         edit
                     </i>
                 </a>
-                <a routerLink="" class="delete">
+                <a routerLink="/products/delete/{{ row.id }}" class="delete">
                     <i class="material-icons">
                         delete
                     </i>
