--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,18 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
 
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .azul-cooperchip {
     color: cornflowerblue;
+}
+
+.accent-cooperchip {
+    color: #e35e6b;
 }
 
 .v-middle {
     vertical-align: middle;
 }
 
+
 /*Toquei pela diretiva appRed*/
+
 .red {
     color: #e35e6b
+}
+
+.msg-success {
+    background-color: #28a745;
+    color: #fff;
+}
+
+.msg-error {
+    background-color: #e35e6b;
+    color: #fff;
 }
