--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -1,8 +1,6 @@
-
-.header{
+.header {
     display: flex;
     align-items: center;
-
     /* background-color: #ed5353; */
 }
 
@@ -10,6 +8,7 @@
     display: flexbox;
     align-items: center;
     text-decoration: none;
+    color: #333;
 }
 
 .header .logo {
@@ -17,8 +16,9 @@
     width: 200px;
 }
 
-.header .title-group{
-    padding-left: 25px;;
+.header .title-group {
+    padding-left: 25px;
+    ;
     align-items: center;
 }
 
@@ -26,4 +26,3 @@
     padding-right: 5px;
     align-items: center;
 }
-
