--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,4 +1,3 @@
-
 <mat-toolbar class="header mat-elevation-z4">
     <span>
         <a routerLink="/">
@@ -6,11 +5,11 @@
         </a>
     </span>
     <span class="title-group">
-        <a>
+        <a routerLink="{{ routeUrl }}">
             <i class="material-icons v-middle">
-                dashboard
+                {{ icon }}
             </i>
-            Início
+            {{ title }}
         </a>
     </span>
 </mat-toolbar>
