--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -1,7 +1,8 @@
-
 <mat-card class="home mat-elevation-z3">
     <mat-card-title class="title">Bem vindo!</mat-card-title>
     <mat-card-subtitle class="subtitle">
         Sistema de Gestão Hospitalar - Medical Management System. Desenvolvido por: Cooperchip C P E S Ltda. - versão Angular 11.0.0.
     </mat-card-subtitle>
 </mat-card>
+
+<app-dashboard></app-dashboard>
