--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,26 +1,26 @@
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="products">
+    <table mat-table [dataSource]="dataSource" matSort>
         <!-- Id Column -->
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef>Id</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
             <td mat-cell *matCellDef="let row">{{row.id}}</td>
         </ng-container>
 
         <!-- Descrição Column -->
         <ng-container matColumnDef="descricao">
-            <th mat-header-cell *matHeaderCellDef>Descrição</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
             <td mat-cell *matCellDef="let row">{{row.descricao}}</td>
         </ng-container>
 
         <!-- Referência Column -->
         <ng-container matColumnDef="referencia">
-            <th mat-header-cell *matHeaderCellDef>Referência</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Referência</th>
             <td mat-cell *matCellDef="let row">{{row.referencia}}</td>
         </ng-container>
 
         <!-- Preço Column -->
         <ng-container matColumnDef="preco">
-            <th mat-header-cell *matHeaderCellDef>Preço (R$)</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Preço (R$)</th>
             <td mat-cell *matCellDef="let row">{{row.preco | currency: 'BRL'}}</td>
         </ng-container>
 
@@ -45,10 +45,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <!-- <mat-paginator #paginator 
-        [length]="dataSource?.data.length" 
-        [pageIndex]="0" [pageSize]="6"
-        [pageSizeOptions]="[6,10,20,25, 50, 100]">
-    </mat-paginator> -->
+    <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="5" [pageSizeOptions]="[5, 10, 15, 20, 50]">
+    </mat-paginator>
 
 </div>
