--- a/frontend/src/app/components/medico/medico-update/medico-update.component.html
+++ b/frontend/src/app/components/medico/medico-update/medico-update.component.html
@@ -1,1 +1,27 @@
-<p>medico-update works!</p>
+<mat-card>
+    <mat-card-title class="accent-cooperchip">Alterar Médico</mat-card-title>
+    <form>
+
+        <mat-form-field>
+            <input matInput placeholder="Nome" [(ngModel)]="medico.nome" name="nome">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Especialidade" [(ngModel)]="medico.especialidade" name="especialidade">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="CRM" [(ngModel)]="medico.crm" name="crm">
+        </mat-form-field>
+
+    </form>
+
+    <button mat-raised-button (click)="updateMedico()" color="accent">
+        Atualizar
+    </button>
+
+    <button mat-raised-button (click)="cancel()">
+        Calcelar
+    </button>
+
+</mat-card>
