Todos os componentes de Pacientes criados, assim como model e service

--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -13,8 +13,13 @@
             </a>
             <a mat-list-item routerLink="/medicos">
                 <i class="material-icons">
-                    add_to_queue
+                    home_repair_service
                 </i> Médicos
+            </a>
+            <a mat-list-item routerLink="/pacientes">
+                <i class="material-icons">
+                    local_hotel
+                </i> Pacientes
             </a>
         </mat-nav-list>
     </mat-sidenav>
