--- a/frontend/src/app/components/paciente/paciente-delete/paciente-delete.component.html
+++ b/frontend/src/app/components/paciente/paciente-delete/paciente-delete.component.html
@@ -1,1 +1,28 @@
-<p>paciente-delete works!</p>
+<mat-card>
+    <mat-card-title appRed>Confirma a Exclusão do Paciente?</mat-card-title>
+    <hr /><br />
+    <form>
+
+        <mat-form-field>
+            <input matInput disabled placeholder="Nome" [value]="paciente.nome" name="nome">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput disabled placeholder="CPF" [value]="paciente.cpf" name="cpf">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput disabled placeholder="Estado do Paciente" [value]="paciente.estado" name="estado">
+        </mat-form-field>
+
+    </form>
+
+    <button mat-raised-button (click)="deletePaciente()" color="warn">
+        Sim
+    </button>
+
+    <button mat-raised-button (click)="cancel()">
+        Não
+    </button>
+
+</mat-card>
