--- a/frontend/src/app/components/paciente/paciente-update/paciente-update.component.html
+++ b/frontend/src/app/components/paciente/paciente-update/paciente-update.component.html
@@ -1,1 +1,27 @@
-<p>paciente-update works!</p>
+<mat-card>
+    <mat-card-title class="accent-cooperchip">Alterar Paciente</mat-card-title>
+    <form>
+
+        <mat-form-field>
+            <input matInput placeholder="Nome" [(ngModel)]="paciente.nome" name="nome">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="CPF" [(ngModel)]="paciente.cpf" name="cpf">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Estado do Paciente" [(ngModel)]="paciente.estado" name="estado">
+        </mat-form-field>
+
+    </form>
+
+    <button mat-raised-button (click)="updatePaciente()" color="accent">
+        Atualizar
+    </button>
+
+    <button mat-raised-button (click)="cancel()">
+        Calcelar
+    </button>
+
+</mat-card>
