--- a/frontend/src/app/components/paciente/paciente-create/paciente-create.component.html
+++ b/frontend/src/app/components/paciente/paciente-create/paciente-create.component.html
@@ -13,6 +13,12 @@
 
         <mat-form-field>
             <input matInput placeholder="Estado do Paciente" [(ngModel)]="paciente.estado" name="estado">
+
+            <!-- <select mat-select [(ngModel)]="let estado in estados" placeholder="Estado do Paciente">
+                <mat-option [value]="estado.dscricao">{{ estado.descricao }}</mat-option>
+            </select> -->
+
+
         </mat-form-field>
 
     </form>
