select funcionando, mas ainda sem formatação

--- a/frontend/src/app/components/paciente/paciente-create/paciente-create.component.html
+++ b/frontend/src/app/components/paciente/paciente-create/paciente-create.component.html
@@ -11,15 +11,23 @@
             <input matInput placeholder="CPF" [(ngModel)]="paciente.cpf" name="cpf">
         </mat-form-field>
 
-        <mat-form-field>
-            <input matInput placeholder="Estado do Paciente" [(ngModel)]="paciente.estado" name="estado">
+        <!-- <mat-form-field>
 
-            <!-- <select mat-select [(ngModel)]="let estado in estados" placeholder="Estado do Paciente">
-                <mat-option [value]="estado.dscricao">{{ estado.descricao }}</mat-option>
-            </select> -->
+            <select mat-select mat-select [(ngModel)]="paciente.estado" name="estado" placeholder="Estado do Paciente">
+            <option mat-option *ngFor="let estpaciente of estados" [value]="estpaciente.descricao">{{estpaciente.descricao}}</option>
+        </select>
+
+        </mat-form-field> -->
+
+        <!-- <mat-form-field> -->
+        <!-- <input matInput placeholder="Estado do Paciente" [(ngModel)]="paciente.estado" name="estado"> -->
+
+        <select [(ngModel)]="paciente.estado" name="estado" id="estado" placeholder="Estado do Paciente">
+                <option *ngFor="let estpaciente of estados" [value]="estpaciente.descricao">{{ estpaciente.descricao }}</option>
+            </select>
 
 
-        </mat-form-field>
+        <!-- </mat-form-field> -->
 
     </form>
 
