--- a/frontend/src/app/components/paciente/paciente-update/paciente-update.component.html
+++ b/frontend/src/app/components/paciente/paciente-update/paciente-update.component.html
@@ -10,13 +10,15 @@
             <input matInput placeholder="CPF" [(ngModel)]="paciente.cpf" name="cpf">
         </mat-form-field>
 
-
-
-        <select [(ngModel)]="paciente.estado" name="estado" id="estado" placeholder="Estado do Paciente">
-          <option *ngFor="let estpaciente of estados" [value]="estpaciente.descricao">{{ estpaciente.descricao }}</option>
-      </select>
-
-
+        <!-- <h4>Basic mat-select</h4> -->
+        <mat-form-field appearance="fill">
+            <mat-label>Estado do Paciente</mat-label>
+            <mat-select [(ngModel)]="paciente.estado" name="estado" id="estado">
+                <mat-option *ngFor="let estpaciente of estados" [value]="estpaciente.descricao">
+                    {{ estpaciente.descricao }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
 
     </form>
 
